--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %} {% block content %}
 
-<p>Article list page...</p>
+<ol>
+
+    {% for obj in object_list %} 
+    <li>{{ obj.title }}</li>
+    {% endfor %}
+
+</ol>
 
 {% endblock content %}
