--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %} {% block content %}
 
-<ol>
-
-    {% for obj in object_list %} 
-    <li>{{ obj.title }}</li>
+<div class="articles">
+    {% for obj in object_list %}
+        <div class="article">
+            <h5><a href="#">{{ obj.title }}</a></h5>
+            <p>{{ obj.snippet }}</p>
+            <p>{{ obj.timestamp }}</p>
+        </div>
     {% endfor %}
-
-</ol>
+</div>
 
 {% endblock content %}
