Set up media directories and add article images

--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -2,6 +2,7 @@
 
 <div class="articles">
     <div class="article">
+        <img class="thumbnail" src="{{ article.thumbnail.url }}" alt="">
         <h5>{{ object.title }}</h5>
         <p>{{ object.body }}</p>
         <p>{{ object.timestamp }}</p>
