Add user logout

--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -4,6 +4,8 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'articles:article-list' %}">Articles</a></li>
+            <li><a href="{% url 'accounts:account-login' %}">Login</a></li>
+            <li><a href="{% url 'accounts:account-logout' %}">Logout</a></li>
         </ul>
     </div>
 </nav>
