--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="articles">
-    <div class="article">
-        <img class="thumbnail" src="{{ article.thumbnail.url }}" alt="">
-        <h5>{{ object.title }}</h5>
-        <p>{{ object.body }}</p>
-        <p>{{ object.timestamp }}</p>
+<div class="article">
+    <div class="card">
+        <div class="card-image">
+            <div class="thumbnail" style="background-image: url('{{ object.thumbnail.url }}')">
+                <span class="card-title">
+                    {{ object.title }}
+                </span>
+            </div>
+        </div>
+        <div class="card-content">
+            <p class="article-paragraph">{{ object.body }}</p>
+            <p>
+                <br>
+                {{ object.author }} on {{ object.timestamp }}
+            </p>
+        </div>
+        <div class="card-action">
+            <a href="{% url 'articles:article-list' %}">Go back</a>
+        </div>
     </div>
 </div>
 
