--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -2,10 +2,25 @@
 
 <div class="articles">
     {% for obj in object_list %}
-        <div class="article">
-            <h5><a href="{% url 'articles:article-detail' slug=obj.slug %}">{{ obj.title }}</a></h5>
-            <p>{{ obj.snippet }}</p>
-            <p>{{ obj.timestamp }}</p>
+        <div class="card">
+            <div class="card-image">
+                <div class="thumbnail" style="background-image: url('{{ obj.thumbnail.url }}')">
+                    <span class="card-title">
+                        {{ obj.title }}
+                    </span>
+                </div>
+            </div>
+            <div class="card-content">
+                <p class="article-paragraph">{{ obj.snippet }}</p>
+                <p>
+                    <small>
+                        {{ obj.author }} on {{ obj.timestamp }}
+                    </small>
+                </p>
+            </div>
+            <div class="card-action">
+                <a href="{% url 'articles:article-detail' slug=obj.slug %}">Read more</a>
+            </div>
         </div>
     {% endfor %}
 </div>
