--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,7 +1,14 @@
+.article-paragraph {
+    text-align: justify;
+}
+
 .brand-logo {
     margin-left: 10px;
 }
 
 .thumbnail {
+    display: block;
     width: 100%;
+    min-height: 300px;
+    background-size: cover;
 }
