--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -17,10 +17,13 @@
             </p>
         </div>
         <div class="card-action">
+            <a href="{% url 'articles:article-list' %}">Go back</a>
             {% if user.is_authenticated and user.username == object.author.username %}
                 <a href="{% url 'articles:article-edit' slug=object.slug %}">Edit</a>
             {% endif %}
-            <a href="{% url 'articles:article-list' %}">Go back</a>
+            {% if user.is_authenticated and user.username == object.author.username %}
+                <a href="{% url 'articles:article-delete' slug=object.slug %}">Delete</a>
+            {% endif %}
         </div>
     </div>
 </div>
