Add SuccessMessageMixin to create and update views

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,6 +12,7 @@
         <div class="header">
             {% include 'snippets/nav.html' %}
         </div>
+        {% include 'snippets/messages.html' %}
         <div class="content">
             {% block content %}{% endblock content %}
         </div>
