--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -6,6 +6,7 @@
             <li><a href="{% url 'articles:article-list' %}">Articles</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'articles:article-create' %}">New article</a></li>
+                <li><a href="{% url 'accounts:account-profile' %}">Profile</a></li>
                 <li><a href="{% url 'accounts:account-logout' %}">Logout</a></li>
             {% else %}
                 <li><a href="{% url 'accounts:account-login' %}">Login</a></li>
