--- a/src/accounts/templates/accounts/account_profile.html
+++ b/src/accounts/templates/accounts/account_profile.html
@@ -12,6 +12,7 @@
             </div>
             <div class="card-action">
                 <a href="{% url 'articles:article-list' %}">Home page</a>
+                <a href="{% url 'accounts:account-edit' %}">Edit profile</a>
             </div>
         </div>
     </div>
