--- a/src/accounts/templates/accounts/account_login_form.html
+++ b/src/accounts/templates/accounts/account_login_form.html
@@ -7,5 +7,8 @@
         Login
     </button>
 </form>
+<small>
+    Forgot your password? Click <a href="{% url 'account-password-reset' %}">here</a>
+</small>
 
 {% endblock content %}
