--- a/src/accounts/templates/accounts/account_login_form.html
+++ b/src/accounts/templates/accounts/account_login_form.html
@@ -1,14 +1,21 @@
 {% extends 'base.html' %} {% block content %}
 
-<form action="" method="POST">{% csrf_token %} 
-    {{ form.as_p }}
-    <button type="submit" class="btn-large waves-effect waves-light left">
-        <i class="material-icons left">add_circle</i>
-        Login
-    </button>
+<form action="" method="POST">{% csrf_token %}
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Login</span>
+            {{ form.as_p }}
+            <p>
+                <small>
+                    Forgot your password? Click <a href="{% url 'account-password-reset' %}">here</a>
+                </small>
+            </p><br>
+            <button type="submit" class="btn-large waves-effect waves-light left">
+                <i class="material-icons left">arrow_right_alt</i>
+                Login
+            </button>
+        </div>
+    </div>
 </form>
-<small>
-    Forgot your password? Click <a href="{% url 'account-password-reset' %}">here</a>
-</small>
 
 {% endblock content %}
