--- a/src/accounts/templates/accounts/password_reset.html
+++ b/src/accounts/templates/accounts/password_reset.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %} {% block content %}
 
 <form action="" method="POST">{% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn-large waves-effect waves-light left">
-        <i class="material-icons left">add_circle</i>
-        Request password reset
-    </button>
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Password reset</span>
+            {{ form.as_p }}
+            <br>
+            <button type="submit" class="btn-large waves-effect waves-light left">
+                <i class="material-icons left">arrow_right_alt</i>
+                Request password reset
+            </button>
+        </div>
+    </div>
 </form>
 
 {% endblock content %}
