--- a/src/articles/templates/articles/article_create_form.html
+++ b/src/articles/templates/articles/article_create_form.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %} {% block content %}
 
-    <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %} {{ form.as_p }}
-        <button type="submit" class="btn-large waves-effect waves-light left">
-            <i class="material-icons left">add_circle</i>
-            Create article
-        </button>
+    <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">Create new article</span>
+                {{ form.as_p }}
+                <br>
+                <button type="submit" class="btn-large waves-effect waves-light left">
+                    <i class="material-icons left">add_circle</i>
+                    Create article
+                </button>
+            </div>
+        </div>
     </form>
 
     <script src="/static/slugify.js"></script>
