--- a/src/articles/templates/articles/article_update_form.html
+++ b/src/articles/templates/articles/article_update_form.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %} {% block content %}
 
-<form action="" method="POST" enctype="multipart/form-data">{% csrf_token %} {{ form.as_p }}
-    <button type="submit" class="btn-large waves-effect waves-light left">
-        <i class="material-icons left">edit</i>
-        Update
-    </button>
+<form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Edit article</span>
+            {{ form.as_p }}
+            <br>
+            <button type="submit" class="btn-large waves-effect waves-light left">
+                <i class="material-icons left">save</i>
+                Update
+            </button>
+        </div>
+    </div>
 </form>
 
 {% endblock content %}
