--- a/src/accounts/templates/accounts/account_profile.html
+++ b/src/accounts/templates/accounts/account_profile.html
@@ -13,6 +13,7 @@
             <div class="card-action">
                 <a href="{% url 'articles:article-list' %}">Home page</a>
                 <a href="{% url 'accounts:account-edit' %}">Edit profile</a>
+                <a href="{% url 'password_change' %}">Change password</a>
             </div>
         </div>
     </div>
