--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,6 +17,6 @@
             {% block content %}{% endblock content %}
         </div>
     </div>
-    {% include 'snippets/css.html' %}
+    {% include 'snippets/js.html' %}
 </body>
 </html>
