--- a/src/templates/snippets/js.html
+++ b/src/templates/snippets/js.html
@@ -1,2 +1,4 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+<!-- Mobile nav -->
+<script src="/static/mobile_nav.js"></script>
