Add footer and change layout a bit

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,17 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+.page-footer {
+    margin-top: 2vh;
+}
+
 .article-paragraph {
     text-align: justify;
 }
