--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,15 +8,15 @@
     <title>Blog</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            {% include 'snippets/nav.html' %}
-        </div>
-        {% include 'snippets/messages.html' %}
-        <div class="content">
+    <header>
+        {% include 'snippets/nav.html' %}
+    </header>
+    <main>
+        <div class="container">
             {% block content %}{% endblock content %}
         </div>
-    </div>
+    </main>
+    {% include 'snippets/footer.html' %}
     {% include 'snippets/js.html' %}
 </body>
 </html>
