--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -20,25 +20,7 @@
         </div>
     {% endfor %}
     {% if is_paginated %}
-        <div class="container">
-            <div class="pagination center-align">
-                {% if page_obj.has_previous %}
-                    <a href="?page=1" class="btn-small waves-effect waves-light">First</a>
-                    <a href="?page={{ page_obj.previous_page_number }}" class="btn-small waves-effect waves-light">Previous</a>
-                {% endif %}
-                {% for num in page_obj.paginator.page_range %}
-                    {% if page_obj.number == num %}
-                        <a href="?page={{ num }}" class="btn-small waves-effect waves-light disabled">{{ num }}</a>
-                    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %} 
-                        <a href="?page={{ num }}" class="btn-small waves-effect waves-light">{{ num }}</a>
-                    {% endif %}
-                {% endfor %}
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}" class="btn-small waves-effect waves-light">Next</a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}" class="btn-small waves-effect waves-light">Last</a>
-                {% endif %}
-            </div>
-        </div>
+        {% include 'snippets/pagination.html' %}
     {% endif %}
 </div>
 
