--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -13,6 +13,15 @@
                 <li><a href="{% url 'accounts:account-login' %}"><i class="material-icons left">input</i>Login</a></li>
                 <li><a href="{% url 'accounts:account-create' %}"><i class="material-icons left">person_add</i>Register</a></li>
             {% endif %}
+            <li>
+                <form action="{% url 'articles:article-search-form' %}" method="get">
+                    <div class="input-field s6 s12">
+                        <i class="material-icons prefix">search</i>
+                        <input type="text" id="autocomplete-input" name="q" placeholder="search..." class="autocomplete">
+                        <input type="submit" style="position: absolute; left: -9999px" />
+                    </div>
+                </form>
+            </li>
         </ul>
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{% url 'home' %}"><i class="material-icons left">home</i>Home</a></li>
@@ -25,6 +34,12 @@
                 <li><a href="{% url 'accounts:account-login' %}"><i class="material-icons left">input</i>Login</a></li>
                 <li><a href="{% url 'accounts:account-create' %}"><i class="material-icons left">person_add</i>Register</a></li>
             {% endif %}
+            <li>
+                <div class="input-field s6 s12">
+                    <i class="material-icons prefix">search</i>
+                    <input type="text" id="autocomplete-input" placeholder="search..." class="autocomplete">
+                </div>
+            </li>
         </ul>
     </div>
 </nav>
