--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <div class="container">
+            {% include 'snippets/messages.html' %}
             {% block content %}{% endblock content %}
         </div>
     </main>
