--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -13,7 +13,7 @@
             <p class="article-paragraph">{{ object.body }}</p>
             {% include 'snippets/author_chip.html' with obj=object %}
         </div>
-        <div class="card-action">
+        <div class="card-action" style="position: relative;">
             <a href="{% url 'articles:article-list' %}">Go back</a>
             {% if user.is_authenticated and user.username == object.author.username %}
                 <a href="{% url 'articles:article-edit' slug=object.slug %}">Edit</a>
@@ -21,6 +21,17 @@
             {% if user.is_authenticated and user.username == object.author.username %}
                 <a href="{% url 'articles:article-delete' slug=object.slug %}">Delete</a>
             {% endif %}
+            <div class="fixed-action-btn" style="position: absolute; right: 24px;">
+                <a class="btn-floating btn-large red">
+                    <i class="large material-icons">share</i>
+                </a>
+                <ul>
+                    <li><a class="btn-floating red"><i class="fab fa-google-plus-g"></i></a></li>
+                    <li><a class="btn-floating blue darken-3"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a class="btn-floating orange darken-2"><i class="fab fa-reddit"></i></a></li>
+                    <li><a class="btn-floating blue"><i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
