--- a/src/templates/snippets/css.html
+++ b/src/templates/snippets/css.html
@@ -6,5 +6,9 @@
 <!-- Material Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
 <!-- Custom styles -->
 <link rel="stylesheet" href="{% static 'styles.css' %}">
