--- a/src/templates/snippets/js.html
+++ b/src/templates/snippets/js.html
@@ -2,3 +2,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 <!-- Mobile nav -->
 <script src="/static/mobile_nav.js"></script>
+<!-- Social share buttons -->
+<script src="/static/social_buttons.js"></script>
