--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -11,7 +11,27 @@
         </div>
         <div class="card-content">
             <p class="article-paragraph">{{ object.body }}</p>
+            <p class="article-tags">
+                <br>
+                {% for tag in object.tags.all %}
+                    <a href="{% url 'articles:article-tag-list' tag=tag.name %}">{{ tag.name }}</a>,
+                {% endfor %}
+            </p>
             {% include 'snippets/author_chip.html' with obj=object %}
+            <p>
+                <ul class="collection">
+                    <li class="collection-header">
+                        <h5>Related articles:</h4>
+                    </li>
+                    {% for article in related_articles %}
+                        <li class="collection-item">
+                            <a href="{% url 'articles:article-detail' slug=article.slug %}">
+                                {{ article.title }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </p>
         </div>
         <div class="card-action" style="position: relative;">
             <a href="{% url 'articles:article-list' %}">Go back</a>
