--- a/src/articles/templates/snippets/related_articles_chip.html
+++ b/src/articles/templates/snippets/related_articles_chip.html
@@ -1,14 +1,23 @@
-<p class="related-articles">
-    <ul class="collection">
+{% if related_articles %}
+    <ul class="collection related-articles">
         <li class="collection-header">
             <h5>Related articles:</h4>
         </li>
         {% for article in related_articles %}
-        <li class="collection-item">
-            <a href="{% url 'articles:article-detail' slug=article.slug %}">
-                {{ article.title }}
-            </a>
+        <li class="collection-item avatar">
+            <img class="thumbnail-related" src="{{ article.thumbnail.url }}">
+            <span class="title">
+                <a href="{% url 'articles:article-detail' slug=article.slug %}">
+                    {{ article.title }}
+                </a>
+            </span>
+            <p>
+                <a href="{% url 'articles:article-user-list' username=article.author.username %}">
+                    {{ article.author }}
+                </a> 
+                on {{ article.timestamp|date:'F d, Y' }}
+            </p>
         </li>
         {% endfor %}
     </ul>
-</p>
+{% endif %}
