Add autocomplete to searchbox (most common words from articles)

--- a/src/templates/snippets/js.html
+++ b/src/templates/snippets/js.html
@@ -4,3 +4,5 @@
 <script src="/static/mobile_nav.js"></script>
 <!-- Social share buttons -->
 <script src="/static/social_buttons.js"></script>
+<!-- Search autocomplete -->
+<script src="/static/search_autocomplete.js"></script>
