--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -14,13 +14,7 @@
                 <li><a href="{% url 'accounts:account-create' %}"><i class="material-icons left">person_add</i>Register</a></li>
             {% endif %}
             <li>
-                <form action="{% url 'articles:article-search-form' %}" method="get">
-                    <div class="input-field s6 s12">
-                        <i class="material-icons prefix">search</i>
-                        <input type="text" id="autocomplete-input" name="q" placeholder="search..." class="autocomplete">
-                        <input type="submit" style="position: absolute; left: -9999px" />
-                    </div>
-                </form>
+                {% include 'snippets/search_box.html' %}
             </li>
         </ul>
         <ul class="sidenav" id="mobile-demo">
@@ -35,13 +29,7 @@
                 <li><a href="{% url 'accounts:account-create' %}"><i class="material-icons left">person_add</i>Register</a></li>
             {% endif %}
             <li>
-                <form action="{% url 'articles:article-search-form' %}" method="get">
-                    <div class="input-field s6 s12">
-                        <i class="material-icons prefix">search</i>
-                        <input type="text" id="autocomplete-input" name="q" placeholder="search..." class="autocomplete">
-                        <input type="submit" style="position: absolute; left: -9999px" />
-                    </div>
-                </form>
+                {% include 'snippets/search_box.html' %}
             </li>
         </ul>
     </div>
